[package]
name = "rasasa-server"
version = "0.1.0"
authors = ["Tim Dévé <timdeve@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-rt          = "1.0"
actix-web         = "2.0"
atom_syndication  = "0.6"
chrono            = { version = "0.4", features = ["serde"] }
clokwerk          = "0.2"
diesel            = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
env_logger        = "0.7"
log               = "0.4"
openssl           = { version = "0.10", features = ["vendored"] }
reqwest           = "0.9"
rss               = "1.6"
serde             = "1.0"

