[package]
name = "rasasa-server"
version = "0.1.0"
authors = ["Tim Dévé <timdeve@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web         = "4"
atom_syndication  = "0.9"
chrono            = { version = "0.4", features = ["serde"] }
clokwerk          = "0.3"
diesel            = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
env_logger        = "0.7"
log               = "0.4"
openssl           = { version = "0.10", features = ["vendored"] }
reqwest           = { version = "0.10", features = ["blocking"] }
rss               = "1.6"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"

