[package]
name = "rasasa-server"
version = "0.1.0"
authors = ["Tim Dévé <timdeve@users.noreply.github.com>"]
edition = "2021"

[dependencies]
actix-web         = "4"
anyhow            = "1"
atom_syndication  = "0.12"
chrono            = { version = "0.4", features = ["serde"] }
clokwerk          = "0.4"
diesel            = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2.1"
env_logger        = "0.10"
log               = "0.4"
openssl           = { version = "0.10", features = ["vendored"] }
reqwest           = { version = "0.11", features = ["blocking"] }
rss               = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"

